[package]
name = "bepuvy"
version = "0.1.0"
edition = "2021"

[dependencies]
bepuvy-sys = { git = "https://github.com/DrewRidley/bepuvy-sys.git" }
#bepuvy-sys = { path = "../bepuvy-sys" }
bevy = "0.15"
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui", version = "0.4.0-rc.1" }
rand = "0.8.5"
